--- a/index.html
+++ b/index.html
@@ -55,17 +55,14 @@
                     </header>
                     <!-- End Header Area -->
 
-                    <div class="row fullscreen align-items-center justify-content-center" style="height: 735px;">
-                        <div class="col-lg-10">
+                    <div class="row g-fullheight--sm g-fullheight--md g-fullheight--lg g-fullheight--xs align-items-center justify-content-center" style="margin: auto;" >
                             <div class="banner-content text-center">
-                                        <h1 class="text-uppercase text-white">Shawn Kenneth</h1>
+                                        <h1 class="text-uppercase text-white">Shawn<br> Kenneth</h1>
                                         <p class="text-uppercase mx-auto">Engineer, Musician, Writer and Graphic Designer.
                                         </p>
                             </div>
-                        </div>
-                    </div>
-                    
-				</div>
+            
+				    </div>
 			</section>
 			<!-- End Banner Area -->
 
