--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                             <div class="header-wrap">
                                 <div class="header-top d-flex justify-content-between align-items-center">
                                     <div class="logo">
-                                        <a href="#home"><img src="img/logo.png" alt=""></a>
+                                        <a href="#home"><img src="img/logo.png" alt="" style="width:96px;"></a>
                                     </div>
                                     <div class="main-menubar d-flex align-items-center">
                                         <nav class="hide">
