--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                             <div class="header-wrap">
                                 <div class="header-top d-flex justify-content-between align-items-center">
                                     <div class="logo">
-                                        <a href="#home"><img src="img/logo.png" alt="" style="width:96px;"></a>
+                                        <a href="#home"><img src="img/logo.png" alt="" style="width:48px;"></a>
                                     </div>
                                     <div class="main-menubar d-flex align-items-center">
                                         <nav class="hide">
@@ -132,8 +132,8 @@
 						</div>
 						<div class="col-lg-8">
 								<!-- SnapWidget -->
-                            <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                            <iframe src="https://snapwidget.com/embed/530866" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+                            <script src="//www.powr.io/powr.js?external-type=html"></script> 
+ <div class="powr-instagram-feed" id="40bce112_1523357019"></div>
 						</div>
 					</div>
 				</div>
