--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<h2>
 								The Dissonant <span>Chord</span>
 							</h2>
-                           <p>The Dissonant Chord is a Solo Music Project that features Original Music as well as Song Covers. Find content on the following platforms:</p>
+                           <p>The Dissonant Chord is a Solo Music Project that features Original Music as well as Song Covers. Find content on the following platforms: (Click any of the icons below)</p>
                 
                             <div class="footer-social2 footer-social2-sm footer-social2-md ">
 							<a href="http://instagram.com/thedissonantchord"><i class="fa fa-instagram"></i></a>
