--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
 								Follow Shawn on various Social Media using the links below:
                                 <div class="footer-social2 footer-social2-sm footer-social5-md">
 							<a href="https://www.facebook.com/ShawnKenn3th"><i class="fa fa-facebook"></i></a>
-							<a href="https://instagram.com/shawnkenn3th"><i class="fa fa-instagram"></i></a>
+							<a href="https://instagram.com/shawnkenneth"><i class="fa fa-instagram"></i></a>
 							<a href="https://twitter.com/shawnkenn3th"><i class="fa fa-twitter"></i></a>
 							<a href="https://www.linkedin.com/in/shawnkenneth/"><i class="fa fa-linkedin"></i></a>
 							<a href="https://youtube.com/shawnss4"><i class="fa fa-youtube"></i></a>
@@ -156,7 +156,7 @@
 						</div>
 						<div class="col-lg-6 footer-social2 footer-social3-sm">
 							<a href="https://www.facebook.com/ShawnKenn3th"><i class="fa fa-facebook"></i></a>
-							<a href="https://instagram.com/shawnkenn3th"><i class="fa fa-instagram"></i></a>
+							<a href="https://instagram.com/shawnkenneth"><i class="fa fa-instagram"></i></a>
 							<a href="https://twitter.com/shawnkenn3th"><i class="fa fa-twitter"></i></a>
 							<a href="https://www.linkedin.com/in/shawnkenneth/"><i class="fa fa-linkedin"></i></a>
 							<a href="https://youtube.com/shawnss4"><i class="fa fa-youtube"></i></a>
