--- a/thedissonantchord.html
+++ b/thedissonantchord.html
@@ -113,7 +113,7 @@
 							             </h2>
                                             <p>Click on the button below to visit the channel and subscribe! Turn on channel notifications to get an alert every time a new video is released!<br><br>
                                             <form action="https://www.youtube.com/user/shawnss4">
-                                            <button type="submit" class="buttonsmoother"><span>Visit Channel!</span></button>
+                                            <button type="submit" class="buttonsmoother"><span>Visit Channel</span></button>
                                             </form> 
                                         
 									       </p>
@@ -147,7 +147,7 @@
 							             </h2>
                                             <p>Check out my latest tracks on Soundcloud! Click on the tracks in the player to listen to them here or click the link below to visit the channel!<br><br>
                                             <form action="https://www.soundcloud.com/shawnkenn3th">
-                                            <button type="submit" class="buttonsmoother"><span>Visit Channel!</span></button>
+                                            <button type="submit" class="buttonsmoother"><span>Visit Channel</span></button>
                                             </form> 
                                         
 									       </p>
@@ -189,7 +189,7 @@
 
                                             <br><br>
                                                 <form action="https://www.instagram.com/thedissonantchord">
-                                                <button type="submit" class="buttonsmoother"><span>Visit Channel!</span></button>
+                                                <button type="submit" class="buttonsmoother"><span>Visit Channel</span></button>
                                             </form> 
                                     </div>
                                         </p>
