--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
 
 						</div>
 							
-				    </div>
+				<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/fd2b6f08b5125f35bbd451a7af3b1f70.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+				
+					</div>
 				</div>
 				</div>
 			</section>
