--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                            
 							<p>Shawn Kenneth Creations is a freelance Graphic Design and Information Technology Solutions Service.<br><br>We offer a full range of Creative Services from Branding, Marketing Collateral to Package Design &amp; Corporate Identity design. Our IT Services include Websites, Landing Pages, Microsites etc.<br></p><br>
                             
-                            <form action="https://www.behance.net/gallery/68476333/Design-Portfolio">
+                            <form action="https://www.behance.net/shawnkenneth">
                             <button type="submit" class="buttonsmoother"><span>View Portfolio</span></button>
                             </form>
 
