--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</div>
 						<div class="col-lg-6 col-sm-12 quote-right">
 							<p class="text-left">
-								I'm a bored human being whose passions are split between Technology and a bunch of Creative Fields. <br><br>I love to do a lot of stuff and this space is dedicated to my most active projects. 
+								I'm a human being whose passions are split between Technology and a bunch of Creative Fields. <br><br>I love to do a lot of stuff and this space is dedicated to my most active projects. 
 							</p>
 						</div>
 					</div>
