--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 						</div>
 						<div class="col-lg-6 col-sm-12 quote-right">
 							<p class="text-left">
-								Hi! I'm Shawn Kenneth Fernandes and I'm a Computer Engineering Professional from Goa, India. I enjoy Good Food and Great Music. I'm perpetually on the lookout for Sarcasm, Intense Conversation and Bacon.<br><br> I never pass up an opportunity to learn something new.
+								Hi! I'm Shawn Kenneth Fernandes, a Computer Engineering Professional from Goa, India. I enjoy Good Food and Great Music. I'm perpetually on the lookout for Sarcasm, Intense Conversation and Bacon.<br><br> I never pass up an opportunity to learn something new.
 							</p>
 						</div>
 					</div>
