--- a/links.html
+++ b/links.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh"; URL="https://linktr.ee/shawnkenneth"/>
+   <!-- HTML meta refresh URL redirection -->
+   <meta http-equiv="refresh"
+   content="0; url=https://linktr.ee/shawnkenneth">
 </head>
+<body>
+   <p>If you don't get redirected,
+   <a href="https://linktr.ee/shawnkenneth">Click Here</a></p>
+</body>
 </html>
